<resources>

    <string name="app_name">MusicDojo</string>
    <string name="menu_training">Training</string>
    <string name="menu_metronome">Metronome</string>
    <string name="menu_timer">Timer</string>

    <string name="training">Training</string>
    <string name="confirm">Confirm</string>

    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="replay">Replay Sound</string>

    <string name="looper">Looper</string>
    <string name="record">Record</string>

    <string name="save_score">Save Score</string>
    <string name="score">%1$d / %2$d</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <string name="question">Question: %1$d / %2$d</string>
    <string name="settings">Settings</string>

    <string name="interval">Intervals</string>
    <string name="pitch">Pitches</string>
    <string name="chord">Chords</string>

    <string name="min2">Minor 2nd</string>
    <string name="maj2">Major 2nd</string>
    <string name="min3">Minor 3rd</string>
    <string name="maj3">Major 3rd</string>
    <string name="per4">Perfect 4th</string>
    <string name="dim5">Diminished 5th</string>
    <string name="per5">Perfect 5th</string>
    <string name="min6">Minor 6th</string>
    <string name="maj6">Major 6th</string>
    <string name="min7">Minor 7th</string>
    <string name="maj7">Major 7th</string>
    <string name="oct">Octave</string>

    <string name="send">Send</string>
    <string name="btnInc">+%1$d</string>

    <string name="email_subject">Ear Training Result</string>
    <string name="email_body">I scored %1$d / %2$d on ear training mode: %3$s</string>

    <string name="enter_time">Enter time (in seconds)</string>

    <string name="countdown_min">%1$d:%2$d</string>
    <string name="countdown_sec_under_ten">%1$d:0%2$d</string>
    <string name="countdown_min_sec_zero">%1$d:00</string>
    <string name="countdown_sec">%1$d</string>

    <string name="start_recording">Recording started!</string>
    <string name="stop_recording">Recording finished!</string>

    <string name="time_format_error">Time has to be entered in numbers only</string>
    <string name="loop_record_error">Cannot play while in recording mode</string>

<!--    -->

</resources>
